# brick-breaker-extreme

./: .gitignore  CMakeLists.txt  README.md  launch.sh  main.cpp  run_compile.sh  set_up_libs_windows.sh  setup.sh
cmake_modules/: FindSFML.cmake
headers/: ball.hpp  brick.hpp  engine.hpp  paddle.hpp
include/: audio_manager.hpp  ball.hpp  brick.hpp  collision_manager.hpp  constants.hpp  engine.hpp  game_object.hpp  paddle.hpp  utils.hpp
src/: audio_manager.cpp  ball.cpp  brick.cpp  collision_manager.cpp  draw.cpp  engine.cpp  game_object.cpp  main.cpp  paddle.cpp  utils.cpp
